añadiendo estilos al header y section

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,52 @@
 body{
-    font-family: monospace;
+   box-sizing: border-box;
+   margin: 0;
+   padding:0;
+   font-family: 'Montserrat', sans-serif;
+   color:#303030;
+
+   }
+
+   /*clases reutilizables**/
+
+   .text-uppercase{
+       text-transform: uppercase;
+   }
+   .box-header{
+       display: inline-block;
+   }
+
+   /*clases especificas**/
+.logo-header{
+width: 200px;
 }
-h1{
-    color: blue;
+
+li{
+    display: inline;
+    list-style: none;
 }
+
+li a{
+    text-decoration: none;
+    color: inherit; /*Hereda el color de su padre*/
+}
+
+header{
+    position: relative;
+}
+
+nav{
+    position: absolute;
+    top: 50%;
+    right: 5%;
+    transform: translateY(-50%);
+  }
+
+  section{
+      text-align: center;   
+  }
+
+  div{
+      display: inline-block;
+      width: 33%;
+  }
